[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cycletls"
version = "0.0.2"
description = "Advanced TLS fingerprinting library with JA3, JA4, HTTP/2, HTTP/3, WebSocket, and SSE support"
readme = "README.md"
authors = [
    {name = "Danny-Dasilva", email = "dannydasilva.solutions@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["tls", "fingerprinting", "ja3", "ja4", "http2", "http3", "websocket", "sse", "quic"]
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.15.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
    "websockets>=10.0",
    "pydantic>=2.0.0",
    "websocket-client>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=6.0.0",
    "types-requests>=2.31.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "myst-parser>=2.0.0",
    "furo>=2023.0.0",
]
benchmark = [
    # HTTP client libraries for testing
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "curl-cffi>=0.5.0",
    "niquests>=3.0.0",
    "pycurl>=7.45.0",
    "tls-client>=0.2.0",
    "ry>=0.0.66",
    "rnet>=0.0.1",
    # Visualization and data processing
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    # Performance utilities
    "uvloop>=0.17.0; sys_platform != 'win32'",
    "typing-extensions>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/Danny-Dasilva/cycletls_python"
Documentation = "https://github.com/Danny-Dasilva/cycletls_python#readme"
Repository = "https://github.com/Danny-Dasilva/cycletls_python"
"Bug Tracker" = "https://github.com/Danny-Dasilva/cycletls_python/issues"

[tool.hatch.build.targets.wheel]
packages = ["cycletls"]

[tool.hatch.build.targets.wheel.force-include]
"cycletls/dist" = "cycletls/dist"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
    | golang
    | tests
    | benchmarks
    | examples
    | client\.py
    | benchmarks\.py
    | benchmarks_async\.py
    | test_async\.py
    | test_cache\.py
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "live: marks tests that run against live tlsfingerprint.com (deselect with '-m \"not live\"')",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_optional = true
exclude = [
    "(?x)(^build/|^dist/|^golang/|^benchmarks/|^tests/|^examples/|^scripts/|setup\\.py$|client\\.py$|^benchmarks\\.py$|^benchmarks_async\\.py$|^test_async\\.py$|^test_cache\\.py$)"
]

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true
